# phantomframe

./: .gitignore  CMakeLists.txt  README.md  docker-compose.yml
backend/: Dockerfile  app.js  config.js  init.sql  package-lock.json  package.json
backend/middleware/: auth.js  error.js  validation.js
backend/routes/: admin.js  auth.js  dashboard.js  detection.js  watermark.js
backend/services/: detectionService.js  mlServiceClient.js  videoProcessor.js  watermarkService.js
backend/src/: server.js
backend/utils/: database.js  redis.js
core/: CMakeLists.txt
core/cmake/: PhantomFrameConfig.cmake.in
core/src/: CMakeLists.txt  main.cpp
core/tests/: CMakeLists.txt
docs/: API.md
frontend/: package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.simple.ts  vite.config.ts
frontend/public/: index.html
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: Navbar.js
frontend/src/pages/: About.js  Dashboard.js  Detection.js  Home.js  Watermark.js
ml_service/: Dockerfile  app.py  requirements.txt
model/: requirements.txt
model/scripts/: train_model.py
model/src/: data_generator.py  watermark_model.py
monitoring/: prometheus.yml
nginx/: nginx.conf
patches/: README.md  vlc_x264_watermark.patch  vlc_x264_watermark_clean.patch
src/: main.cpp
src/common/: utils.cpp  utils.h
src/encoder/: watermark_encoder.cpp  watermark_encoder.h
src/extractor/: watermark_extractor.cpp  watermark_extractor.h
tests/: CMakeLists.txt  test_helpers.cpp  test_helpers.h  test_main.cpp  test_utils.cpp  test_watermark_encoder.cpp  test_watermark_extractor.cpp
